test/tests/bad/transmute-size-mismatch.carth
;; NoClassInstance

(defun foo [Unit] :of (Fun [Unit] Int8)
  (transmute (: 42 Int)))
